Bug 422995 - [opensuse 15.1][kde plasma5] amd gpu pro install crash ksplashqml shutdown
Summary: [opensuse 15.1][kde plasma5] amd gpu pro install crash ksplashqml shutdown
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 5.12.9
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: phd
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-15 00:41 UTC by leedaehee
Modified: 2020-12-16 21:36 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot. (498.03 KB, application/x-zip-compressed)
2020-06-15 00:41 UTC, leedaehee
Details

Note You need to log in before you can comment on or make changes to this bug.
Description leedaehee 2020-06-15 00:41:15 UTC
Created attachment 129371 [details]
screenshot.

In openSUSE 15.1, kde 5, environment, I tried to install amd gpu pro driver in 20.20, 19.10, 18.30 versions using yast2.
Installation was successful, but ksplashqml was shut down immediately after installation.
I don't know what the cause is. I want to know the solution.

Hardware environment is intel g3900, intel graphic monitor output
The Radeon 570 is installed as a pcie.
I will include a screenshot.
The debug part looks like this:

Application: 시스템 설정 (systemsettings5), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6db5034940 (LWP 8522))]

Thread 3 (Thread 0x7f6d8ad18700 (LWP 8528)):
#0  0x00007f6db07b41d8 in read () from /lib64/libc.so.6
#1  0x00007f6da9d11c80 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f6da9ccccb8 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f6da9ccd150 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007f6da9ccd2bc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007f6db11527fb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f6db10f779a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#7  0x00007f6db0f15d4a in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#8  0x00007f6daed449f5 in ?? () from /usr/lib64/libQt5Qml.so.5
#9  0x00007f6db0f1ac8d in ?? () from /usr/lib64/libQt5Core.so.5
#10 0x00007f6dac16f4f9 in start_thread () from /lib64/libpthread.so.0
#11 0x00007f6db07c2f2f in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f6d991f9700 (LWP 8525)):
#0  0x00007f6db07b86db in poll () from /lib64/libc.so.6
#1  0x00007f6da9ccd1a9 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f6da9ccd2bc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f6db11527fb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#4  0x00007f6db10f779a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f6db0f15d4a in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#6  0x00007f6db15d19e5 in ?? () from /usr/lib64/libQt5DBus.so.5
#7  0x00007f6db0f1ac8d in ?? () from /usr/lib64/libQt5Core.so.5
#8  0x00007f6dac16f4f9 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f6db07c2f2f in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f6db5034940 (LWP 8522)):
[KCrash Handler]
#6  0x00007f6db0700520 in raise () from /lib64/libc.so.6
#7  0x00007f6db0701b01 in abort () from /lib64/libc.so.6
#8  0x00007f6db0f058a7 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#9  0x00007f6d9bbf0a54 in ?? () from /usr/lib64/qt5/plugins/xcbglintegrations/libqxcb-glx-integration.so
#10 0x00007f6d9bbee3f7 in ?? () from /usr/lib64/qt5/plugins/xcbglintegrations/libqxcb-glx-integration.so
#11 0x00007f6da2cf2c41 in QXcbIntegration::createPlatformOpenGLContext(QOpenGLContext*) const () from /usr/lib64/libQt5XcbQpa.so.5
#12 0x00007f6db19969df in QOpenGLContext::create() () from /usr/lib64/libQt5Gui.so.5
#13 0x00007f6d83355567 in ?? () from /usr/lib64/qt5/qml/QtGraphicalEffects/private/libqtgraphicaleffectsprivate.so
#14 0x00007f6d83352516 in ?? () from /usr/lib64/qt5/qml/QtGraphicalEffects/private/libqtgraphicaleffectsprivate.so
#15 0x00007f6daecc8506 in QQmlType::SingletonInstanceInfo::init(QQmlEngine*) () from /usr/lib64/libQt5Qml.so.5
#16 0x00007f6daed35a5c in QV4::QmlTypeWrapper::get(QV4::Managed const*, QV4::String*, bool*) () from /usr/lib64/libQt5Qml.so.5
#17 0x00007f6daec8ee9c in QV4::Runtime::method_callProperty(QV4::ExecutionEngine*, int, QV4::CallData*) () from /usr/lib64/libQt5Qml.so.5
#18 0x00007f6d91241547 in ?? ()
#19 0x00007ffdffffa800 in ?? ()
#20 0x00007f6d89919b38 in ?? ()
#21 0x00007f6d89919b28 in ?? ()
#22 0x00007f6d89919b08 in ?? ()
#23 0x00007f6d89919b20 in ?? ()
#24 0x00007f6daedc2af0 in ?? () from /usr/lib64/libQt5Qml.so.5
#25 0x00007f6d89919b30 in ?? ()
#26 0x00005599abadb160 in ?? ()
#27 0x00007ffd5d11c9b0 in ?? ()
#28 0x00005599abadb160 in ?? ()
#29 0x00005599abc465e0 in ?? ()
#30 0x00007f6daebfa83c in QV4::ExecutionContext::simpleCall(QV4::Scope&, QV4::CallData*, QV4::Function*) () from /usr/lib64/libQt5Qml.so.5
#31 0x00007f6daec2251d in ?? () from /usr/lib64/libQt5Qml.so.5
#32 0x00007f6daec8b013 in QV4::Runtime::method_callActivationProperty(QV4::ExecutionEngine*, int, QV4::CallData*) () from /usr/lib64/libQt5Qml.so.5
#33 0x00007f6d91241118 in ?? ()
#34 0x0000000000000960 in ?? ()
#35 0x00007f6d89919a90 in ?? ()
#36 0x00005599abc465a0 in ?? ()
#37 0x00007f6d89919a48 in ?? ()
#38 0x00007f6d9123bbb0 in ?? ()
#39 0x00007f6daebf7f34 in QV4::ExecutionContext::newCallContext(QV4::Function*, QV4::CallData*) () from /usr/lib64/libQt5Qml.so.5
#40 0x00007f6daebfaaaa in QV4::ExecutionContext::call(QV4::Scope&, QV4::CallData*, QV4::Function*, QV4::FunctionObject const*) () from /usr/lib64/libQt5Qml.so.5
#41 0x00007f6daed2531e in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*, QV4::Scope&) () from /usr/lib64/libQt5Qml.so.5
#42 0x00007f6daecbb8ce in QQmlBoundSignalExpression::evaluate(void**) () from /usr/lib64/libQt5Qml.so.5
#43 0x00007f6daecbcbdb in ?? () from /usr/lib64/libQt5Qml.so.5
#44 0x00007f6daed01663 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /usr/lib64/libQt5Qml.so.5
#45 0x00007f6daec9e819 in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /usr/lib64/libQt5Qml.so.5
#46 0x00007f6db1127bff in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#47 0x00007f6daec9b1e4 in QQmlVMEMetaObject::writeVarProperty(int, QV4::Value const&) () from /usr/lib64/libQt5Qml.so.5
#48 0x00007f6daed2ce83 in QQmlBinding::slowWrite(QQmlPropertyData const&, QQmlPropertyData const&, QV4::Value const&, bool, QFlags<QQmlPropertyData::WriteFlag>) () from /usr/lib64/libQt5Qml.so.5
#49 0x00007f6daed2e198 in ?? () from /usr/lib64/libQt5Qml.so.5
#50 0x00007f6daed2f24e in ?? () from /usr/lib64/libQt5Qml.so.5
#51 0x00007f6daed2c003 in QQmlBinding::update(QFlags<QQmlPropertyData::WriteFlag>) () from /usr/lib64/libQt5Qml.so.5
#52 0x00007f6daec730d5 in QV4::QObjectWrapper::getProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, bool) () from /usr/lib64/libQt5Qml.so.5
#53 0x00007f6daec73a10 in QV4::QObjectWrapper::getQmlProperty(QQmlContextData*, QV4::String*, QV4::QObjectWrapper::RevisionMode, bool*, bool) const () from /usr/lib64/libQt5Qml.so.5
#54 0x00007f6daec77ce8 in QV4::QObjectWrapper::getQmlProperty(QV4::ExecutionEngine*, QQmlContextData*, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, bool*) () from /usr/lib64/libQt5Qml.so.5
#55 0x00007f6daec3a542 in QV4::QmlContextWrapper::get(QV4::Managed const*, QV4::String*, bool*) () from /usr/lib64/libQt5Qml.so.5
#56 0x00007f6daebf9484 in QV4::ExecutionContext::getProperty(QV4::String*) () from /usr/lib64/libQt5Qml.so.5
#57 0x00007f6daec8857e in QV4::Runtime::method_getActivationProperty(QV4::ExecutionEngine*, int) () from /usr/lib64/libQt5Qml.so.5
#58 0x00007f6d9124130e in ?? ()
#59 0x0000000000000000 in ?? ()
[Inferior 1 (process 8522) detached]
Comment 1 Nicolás Alvarez 2020-06-15 00:57:27 UTC
Reassigning to plasma for a start. User says ksplashqml was shut down but the stack trace seems to be from systemsettings5, so I'm not sure what's actually the correct product to assign it to.
Comment 2 leedaehee 2020-06-15 01:03:57 UTC
I am new to Linux.
If so, what should I try?
Comment 3 leedaehee 2020-06-15 03:12:47 UTC
I changed the version to opensuse 15.2, reinstalled amdgpupro 19.1, this time
"ksmserver-logout-greeter pid:8295 signal: aborted(6)"
Message appears.
After searching, it is the same symptom that appears in the nvidia driver environment as well as the amd driver. Please tell me how to solve this.
Comment 4 Marco Martin 2020-06-15 12:46:07 UTC
seems same crash as 422954
Comment 5 Bug Janitor Service 2020-11-23 16:38:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kdeclarative/-/merge_requests/37
Comment 6 Nate Graham 2020-12-16 21:36:03 UTC
Git commit 090610124d4650150af49a8e30f6b77ad9803dfe by Nate Graham, on behalf of Piotr Henryk Dabrowski.
Committed on 16/12/2020 at 21:35.
Pushed by ngraham into branch 'master'.

[KQuickAddons] QtQuickSettings::checkBackend() for fallback to software backend

Fixes very annoying crashes of QtQuick KDE applications:
ksmserver-logout-greeter, krunner (if not running before), and others
occuring when the OpenGL driver stops being available (e.g. on upgrade).

This issue often occurs after upgrading graphic drivers, preventing reboot,
which in turn is needed for the drivers to work and not cause this crash.

No changes are required in the above applications, as they all already use
KQuickAddons::QtQuickSettings::init().
Related: bug 421493, bug 398199, bug 375913, bug 366156, bug 346519

M  +36   -3    src/quickaddons/qtquicksettings.cpp
M  +2    -1    src/quickaddons/qtquicksettings.h

https://invent.kde.org/frameworks/kdeclarative/commit/090610124d4650150af49a8e30f6b77ad9803dfe