src/quickaddons/qtquicksettings.cpp
@@ -1,5 +1,6 @@
 /*
     SPDX-FileCopyrightText: 2016 David Edmundson <davidedmundson@kde.org>
+    SPDX-FileCopyrightText: 2020 Piotr Henryk Dabrowski <phd@phd.re>
 
     SPDX-License-Identifier: LGPL-2.0-or-later
 */
@@ -11,17 +12,50 @@
 #include <QQuickWindow>
 #include <QLibraryInfo>
 #include <QVersionNumber>
+#include <QGuiApplication>
+#include <QOpenGLContext>
+
+/**
+ * If QtQuick is configured (QQuickWindow::sceneGraphBackend()) to use the OpenGL backend,
+ * check if it is supported or otherwise reconfigure QtQuick to fallback to software mode.
+ * This function is called by init().
+ *
+ * @returns true if the selected backend is supported, false on fallback to software mode.
+ */
+static bool checkBackend()
+{
+    if (!QQuickWindow::sceneGraphBackend().isEmpty()) {
+        return true; // QtQuick is not configured to use the OpenGL backend
+    }
+    QOpenGLContext* gl = new QOpenGLContext();
+    bool ok = gl->create();
+    if (!ok) {
+        qWarning("Warning: fallback to QtQuick software backend.");
+        QQuickWindow::setSceneGraphBackend(QStringLiteral("software"));
+    }
+    delete gl;
+    return ok;
+}
 
 void KQuickAddons::QtQuickSettings::init()
 {
+    if (!(qobject_cast<QGuiApplication*>qApp)) {
+        qWarning("Error: cannot call KQuickAddons::QtQuickSettings::init() before QGuiApplication is created.");
+        return;
+    }
+
     PlasmaQtQuickSettings::RendererSettings s;
     if (!s.renderLoop().isEmpty() && !qEnvironmentVariableIsSet("QSG_RENDER_LOOP")) {
         qputenv("QSG_RENDER_LOOP", s.renderLoop().toLatin1());
     }
 
-    if (!s.sceneGraphBackend().isNull()) {
-     QQuickWindow::setSceneGraphBackend(s.sceneGraphBackend());
+    if (!s.sceneGraphBackend().isEmpty()) {
+        QQuickWindow::setSceneGraphBackend(s.sceneGraphBackend());
+    } else {
+        QQuickWindow::setSceneGraphBackend(QStringLiteral(""));
+        checkBackend();
     }
+
     auto format = QSurfaceFormat::defaultFormat();
     if (s.forceGlCoreProfile()) {
         format.setVersion(3,2);
@@ -36,4 +70,3 @@ void KQuickAddons::QtQuickSettings::init()
     }
     QSurfaceFormat::setDefaultFormat(format);
 }
-
